# montador-sb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assembler.cpp  assembler.hpp  errors.hpp  exemplo.asm  gen-build.sh  interpreter  interpreter.cpp  lexer.cpp  lexer.hpp  main.cpp  makefile  montador.cpp  montador.hpp
examples/: bin.asm  factorial.ASM  fatoriamacro.ASM  triangle.ASM  triangle2.ASM
include/: box.hpp  codegen.hpp  errors.hpp  instruction_tables.hpp  lexer.hpp  montador.hpp  parser.hpp  preprocessor.hpp
src/: codegen.cpp  interpreter.cpp  lexer.cpp  main.cpp  montador.cpp  parser.cpp  preprocessor.cpp
tests/: catch.hpp  lexer.cpp  main.cpp  parser.cpp  preprocessor.cpp
